# ndap-deep-research-agent

./: .env.example  .gitignore  README.md  SRIT_NDAP_QUERY_RESPONSE_TEMPLATE.md  build_index.py  demo_app.py  harvest_metadata.py  ndap_download.py  pyproject.toml  query.py  schema.py
data/: index_summary.json
data/fixtures/: openapi_7171.json  sourcedetails_7171.json
docs/: README.md  index.html
docs/assets/: ndap_index.json  ndap_recipes.json  prompts.json
ndap/: mcp_server.py  ndap_auth.py  ndap_client.py
proxy/: README.md  worker.js  wrangler.toml
scripts/: batch_ndap_queries.py  check_index_coverage.py  export_recipes.py  export_web_index.py  test_queries.py  wait_and_build_index.sh
