[project]
name = "ndap-deep-research-agent"
version = "0.1.0"
description = "Agent-ready metadata index, MCP tools, and download utilities for NDAP deep research."
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "httpx>=0.28",
    "mcp>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
